Clean: remove all Turkish explanations, keep only EN/FR in notebook

--- a/data_quality_anomaly_detection_advanced.ipynb
+++ b/data_quality_anomaly_detection_advanced.ipynb
@@ -5,9 +5,8 @@
       "metadata": {},
       "source": [
         "# 📊 Data Quality & Advanced Anomaly Detection in Mobility Systems\n",
-        "## COSYS/GRETTIA – Université Gustave Eiffel (TR/EN/FR)\n",
+        "## COSYS/GRETTIA – Université Gustave Eiffel (EN/FR)\n",
         "\n",
-        "- **TR**: Bu notebook, mobilite verileri üzerinde veri kalitesi değerlendirmesi, ileri seviye anomali tespiti ve modelleme (Auto-parameter tuning/hyperparameter optimization) içeren kapsamlı bir çalışma sunar.\n",
         "- **EN**: This notebook presents a comprehensive study on data quality assessment, advanced anomaly detection, and modeling with auto-parameter tuning for mobility data.\n",
         "- **FR**: Ce notebook présente une étude complète sur l’évaluation de la qualité des données, la détection avancée d’anomalies et la modélisation avec réglage automatique des hyperparamètres pour les données de mobilité.\n",
         "\n",
@@ -17,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -29,7 +28,7 @@
         }
       ],
       "source": [
-        "# CELL 1: Libraries & setup (TR/EN/FR)\n",
+        "# CELL 1: Libraries & setup (EN/FR)\n",
         "import numpy as np, pandas as pd, matplotlib.pyplot as plt, seaborn as sns  # core scientific and plotting libs\n",
         "from scipy import stats  # statistical tests and utilities\n",
         "from sklearn.preprocessing import StandardScaler, RobustScaler  # feature scaling utilities\n",
@@ -49,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -84,7 +83,7 @@
         }
       ],
       "source": [
-        "# CELL 2: Load data & quality overview (TR/EN/FR)\n",
+        "# CELL 2: Load data & quality overview (EN/FR)\n",
         "data = pd.read_csv('anomalies_detected.csv')  # load dataset produced by cifre.py\n",
         "print('Shape:', data.shape)  # rows, columns\n",
         "print('Columns:', list(data.columns))  # column names\n",
@@ -328,95 +327,6 @@
         "axes[1,2].hist(votes, bins=[-0.5,0.5,1.5,2.5,3.5,4.5,5.5], rwidth=0.9, color='orchid'); axes[1,2].set_xticks([0,1,2,3,4,5]); axes[1,2].set_title('Votes (0-5)')  # vote histogram\n",
         "plt.tight_layout(); plt.show()\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### 📌 Guidance (TR/EN/FR)\n",
-        "- TR: Hücreleri sırayla çalıştırın. Çıktılar notebook içinde görselleştirilecektir.\n",
-        "- EN: Run cells in order; outputs will be visualized inline.\n",
-        "- FR: Exécutez les cellules dans l’ordre; les sorties seront visualisées dans le notebook.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# 🧠 Explanations for All Code and Visualizations (TR/EN/FR)\n",
-        "\n",
-        "## Cell 1 – Libraries & Setup\n",
-        "- TR: Bu hücre, veri işleme, modelleme ve görselleştirme için gerekli kütüphaneleri yükler. Uyarılar susturulur, rastgelelik kontrolü için seed atanır.\n",
-        "- EN: Loads required libraries for data processing, modeling, and visualization. Suppresses warnings and sets the seed for reproducibility.\n",
-        "- FR: Charge les bibliothèques nécessaires pour le traitement, la modélisation et la visualisation. Supprime les avertissements et fixe la graine pour la reproductibilité.\n",
-        "\n",
-        "## Cell 2 – Data Loading & Quality Overview\n",
-        "- TR: Veri boyutu, sütunlar, eksik değerler ve temel istatistikler raporlanır. IQR hesaplanır; aykırı değer eşiği belirleme için kullanılır.\n",
-        "- EN: Reports shape, columns, missing values, and basic statistics. Computes IQR; used to define outlier thresholds.\n",
-        "- FR: Rapporte la taille, les colonnes, les valeurs manquantes et les statistiques de base. Calcule l’IQR; utilisé pour définir les seuils d’anomalies.\n",
-        "\n",
-        "## Cell 3 – Median Imputation, Scaling, Baseline Flags (Z/IQR/IF)\n",
-        "- TR: Eksik veriler medyanla doldurulur (robust), `StandardScaler` ile ölçeklenir. Z-Score (|Z|>3), IQR (çit dışı), Isolation Forest (ayrık gözlemleri izolasyonla yakalar) bayrakları oluşturulur.\n",
-        "- EN: Fills missing values with median (robust), standardizes features. Creates anomaly flags via Z-Score (|Z|>3), IQR (beyond whiskers), Isolation Forest (isolates rare points).\n",
-        "- FR: Imputation médiane (robuste), standardisation. Crée des indicateurs d’anomalies via Z-Score (|Z|>3), IQR (au-delà des moustaches), Isolation Forest (isole les points rares).\n",
-        "- Neden/Why/Pourquoi: Farklı yöntemler farklı anomali tiplerine duyarlıdır; çoklu bakış güvenilirlik sağlar.\n",
-        "\n",
-        "## Cell 4 – PCA Reconstruction Error, DBSCAN, Ensemble Votes\n",
-        "- TR: PCA ile yeniden inşa hatası (95. persentil üzerinde anormal), DBSCAN ile yoğunluk-dışı noktalar tespit edilir. 5 yöntemin oyları toplanır; votes≥3 güçlü anomali.\n",
-        "- EN: PCA reconstruction error (above 95th percentile) and DBSCAN (density-based outliers). Ensemble of 5 methods; votes≥3 indicates strong anomalies.\n",
-        "- FR: Erreur de reconstruction PCA (au-dessus du 95e percentile) et DBSCAN (anomalies basées sur la densité). Vote d’ensemble de 5 méthodes; votes≥3 = anomalies fortes.\n",
-        "- Neden/Why/Pourquoi: Lineer (PCA) ve yoğunluk tabanlı (DBSCAN) bakış açılarını birleştirmek kapsamı genişletir.\n",
-        "\n",
-        "## Cell 5 – Hyperparameter Optimization (IF & RF)\n",
-        "- TR: `GridSearchCV` ile IF (n_estimators, contamination, max_samples) ve RF (n_estimators, max_depth, min_samples_split) ayarlanır.\n",
-        "- EN: Tunes IF and RF via `GridSearchCV` over key parameters.\n",
-        "- FR: Ajuste IF et RF via `GridSearchCV` sur les paramètres clés.\n",
-        "- Neden/Why/Pourquoi: Doğru hiperparametreler hatalı alarmı azaltır ve yakalama oranını artırır.\n",
-        "\n",
-        "## Cell 6 – Evaluation, ROC & PR Curves\n",
-        "- TR: IF (skor→etikete eşik), RF (olasılık) için doğruluk, kesinlik, geri çağırma, F1 raporlanır. ROC-AUC ve PR eğrileri sınıf dengesizliğine duyarlı analiz sunar.\n",
-        "- EN: Reports accuracy, precision, recall, F1. ROC-AUC and Precision-Recall curves visualize ranking quality, robust under imbalance.\n",
-        "- FR: Rapporte accuracy, précision, rappel, F1. ROC-AUC et courbes PR visualisent la qualité du classement, robustes en cas de déséquilibre.\n",
-        "- Neden/Why/Pourquoi: Anomali tespitinde PR eğrileri özellikle yararlıdır (pozitif sınıf nadir).\n",
-        "\n",
-        "## Cell 7 – Permutation Importance & Partial Dependence (RF)\n",
-        "- TR: Özellik önemini permütasyonla ölçer (model agnostik). PDP ile tekil değişkenin karar üzerindeki marjinal etkisini görselleştirir.\n",
-        "- EN: Model-agnostic permutation importance; PDP visualizes marginal effect of each feature on the prediction.\n",
-        "- FR: Importance par permutation (agnostique), PDP illustre l’effet marginal de chaque variable.\n",
-        "- Neden/Why/Pourquoi: Açıklanabilirlik, alan uzmanlarına güven ve içgörü sağlar.\n",
-        "\n",
-        "## Cell 8 – Visual Dashboards (Hist/Correlation/Geo + Ensemble)\n",
-        "- TR: Dağılımlar aykırıların kuyruk davranışını, korelasyon matrisi ilişkileri, coğrafi harita (votes≥3) uzamsal kümelenmeyi gösterir.\n",
-        "- EN: Distributions show tail behavior, correlation matrix shows relationships, geo map (votes≥3) shows spatial clustering of anomalies.\n",
-        "- FR: Les distributions montrent les queues, la matrice de corrélation les relations, la carte géo (votes≥3) la concentration spatiale des anomalies.\n",
-        "- Neden/Why/Pourquoi: Görsel özetler kalite problemlerinin kök nedenine dair hızlı ipuçları verir.\n",
-        "\n",
-        "## Methodological Rationale (Short)\n",
-        "- TR: Birden çok yöntem (Z/IQR/IF/PCA/DBSCAN) ve oy birleştirme, tek yöntemin kör noktalarını kapatır.\n",
-        "- EN: Multi-method ensemble closes blind spots of any single detector.\n",
-        "- FR: L’ensemble multi‑méthodes comble les angles morts d’un détecteur unique.\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
